# multi_repo_orchestration_tool

./: Cargo.toml  README.MD  orchestration.md  orchestration.yml
.github/workflows/: test.yml  test2.yml  test3.yml  test4.yml  test5.yml  test_deploy.yml
src/: main.rs
src/mrot_core/: file_io.rs  github.rs  mod.rs
src/term_ui/: mod.rs
