[package]
name = "multi_repo_orchestration_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1.57"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
petgraph = "0.6.2"
clap = { version = "4.1.3", features = ["derive"] }
